# gns-desktop

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  fix_build.sh  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml
.github/: dependabot.yml
.github/workflows/: build.yml  deploy-wasm.yml  extension-release.yml  nightly.yml  pr-check.yml
apps/desktop/: .env  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.iOS.plist  entitlements.plist  error_log.txt  tauri.conf.json
apps/desktop/src-tauri/capabilities/: capabilities.json  mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: offline.html
apps/desktop/src-tauri/src/: lib.rs  main.rs  message_handler.rs
apps/desktop/src/components/: HandleClaimScreen.tsx  MainLayout.tsx
apps/extension/: package.json
apps/extension/public/: manifest.json
apps/extension/src/: App.css  App.tsx  index.css
apps/extension/src/hooks/: useGNS.ts
apps/extension/src/wasm/: gns_crypto_wasm.d.ts  gns_crypto_wasm.js  gns_crypto_wasm_bg.wasm  package.json  (+1 more)
apps/mobile/: index.html  package-lock.json  package.json  vite.config.js
apps/mobile/src/: MobileApp.css  MobileApp.jsx  main.jsx
apps/web/: nixpacks.toml  package.json  vite.config.ts
apps/web/src/: App.js  App.js.bak  App.jsx  websocket.js
crates/gns-crypto-core/: Cargo.toml
crates/gns-crypto-core/src/: breadcrumb.rs  encryption.rs  envelope.rs  errors.rs  identity.rs  lib.rs  signing.rs
crates/gns-crypto-wasm/: Cargo.toml
crates/gns-crypto-wasm/src/: lib.rs
crates/gns-payments/: Cargo.toml
crates/gns-payments/src/: config.rs  error.rs  horizon.rs  lib.rs  stellar_client.rs  strkey.rs  transaction.rs
crates/tauri-plugin-gns/: CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SUBMISSION_CHECKLIST.md  build.rs
crates/tauri-plugin-gns/.github/workflows/: ci.yml  release.yml
crates/tauri-plugin-gns/docs/: WHITEPAPER-PLUGIN.md  WHITEPAPER-SDK.md
crates/tauri-plugin-gns/examples/demo-app/: index.html  package.json  vite.config.ts
crates/tauri-plugin-gns/examples/demo-app/src/: App.tsx
crates/tauri-plugin-gns/examples/demo-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/tauri-plugin-gns/examples/demo-app/src-tauri/capabilities/: default.json
crates/tauri-plugin-gns/examples/demo-app/src-tauri/src/: main.rs
crates/tauri-plugin-gns/guest-js/: package-lock.json  package.json  rollup.config.js  tsconfig.json
crates/tauri-plugin-gns/guest-js/src/: identity.ts  index.ts  messaging.ts  resolver.ts  trajectory.ts  trust.ts  types.ts
crates/tauri-plugin-gns/permissions/: default.toml  nfc.toml
crates/tauri-plugin-gns/permissions/autogenerated/: reference.md
crates/tauri-plugin-gns/permissions/autogenerated/commands/: claim_handle.toml  create_identity.toml  decrypt_message.toml  delete_identity.toml  export_identity.toml  export_trajectory.toml  get_breadcrumb_count.toml  get_breadcrumbs.toml  get_collection_status.toml  get_epochs.toml  get_identity.toml  get_message.toml  get_record.toml  get_trajectory_stats.toml  get_trust_details.toml  get_trust_score.toml  import_identity.toml  import_trajectory.toml  is_handle_available.toml  list_identities.toml  load_identity.toml  publish_epoch.toml  release_handle.toml  resolve_handle.toml  resolve_identity.toml  set_default_identity.toml  sign_message.toml  start_collection.toml  stop_collection.toml  update_record.toml  verify_chain.toml  verify_identity.toml
crates/tauri-plugin-gns/permissions/schemas/: schema.json
crates/tauri-plugin-gns/src/: config.rs  error.rs  lib.rs  payments.rs
crates/tauri-plugin-gns/src/commands/: identity.rs  messaging.rs  mod.rs  resolver.rs  trajectory.rs  trust.rs
crates/tauri-plugin-gns/src/core/: crypto.rs  mod.rs  network.rs  storage.rs
crates/tauri-plugin-gns/src/models/: breadcrumb.rs  identity.rs  message.rs  mod.rs  record.rs  trust.rs
crates/tauri-plugin-gns/tests/: integration.rs
crates/tauri-plugin-gns/tests/integration/: crypto_flow.rs  messaging_flow.rs  mod.rs  storage_flow.rs  trajectory_flow.rs
panthera-browser/src/: App.js  gnsApi.js
scripts/: build-wasm.sh  setup-secrets.sh  setup.sh
server/: package-lock.json  package.json
server/migrations/: 001_api_tables.sql  002_merchant_settlement.sql  003_sprint6_advanced_payments.sql  004_sprint7_ecosystem.sql  005_sprint8_infrastructure.sql  current_schema.sql  org_identity_system.sql  sprint8_migration.sql
server/src/: index.ts
server/src/api/: calls.ts  dix.ts  email.ts  loyalty_api.ts  merchant_api.ts  messages.ts  oauth.routes.ts  oauth.ts  org-members.ts  org.ts  payment-hub.ts  payments-v2.ts  receipts_api.ts  refund_api.ts  sprint7_api.ts  sprint8_api.ts  verify.routes.ts  verify.ts  web.ts  webhooks.routes.ts  webhooks.ts
server/src/lib/: db.ts
server/src/services/: echo_bot.ts  stellar_service.ts
server/src/types/: api.types.ts
src-tauri/: Cargo.toml  Info.iOS.plist  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: handle.rs  lib.rs  main.rs  message_handler.rs
src-tauri/src/commands/: breadcrumbs.rs  dix.rs  handles.rs  identity.rs  messaging.rs  mod.rs  network.rs  utils.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/dix/: mod.rs
src-tauri/src/location/: mod.rs
src-tauri/src/network/: mod.rs
src-tauri/src/stellar/: backend.rs  mod.rs
src-tauri/src/storage/: mod.rs
ui/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: BreadcrumbsTab.tsx  BrowserPairingScreen.tsx  ConversationScreen.tsx  HandleClaimScreen.tsx  HomeTab.tsx  IdentityViewer.tsx  LoadingScreen.tsx  MainLayout.tsx  MessagesTab.tsx  NewConversation.tsx  SettingsTab.tsx  WelcomeScreen.tsx
ui/src/lib/: dix.ts  email.ts  profile.ts  tauri.ts
ui/src/pages/: DixTimeline.tsx  PostDetailPage.tsx
ui/src/types/: email.ts
workers/email-inbound/: package.json  wrangler.toml
workers/email-inbound/src/: index.ts
(+132 files in other folders)
