[package]
name = "gns-crypto-wasm"
version = "1.0.0"
edition = "2021"
description = "GNS Crypto compiled to WebAssembly for browser use"
license = "BSL-1.1"
authors = ["GNS Team <dev@gcrumbs.com>"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gns-crypto-core = { path = "../gns-crypto-core", features = ["wasm"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
hex = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
