[package]
name = "gns-demo"
version = "0.1.0"
edition = "2021"
description = "GNS Protocol Demo Application"
authors = ["GNS Protocol <hello@gns.earth>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tauri-apps/plugins-workspace"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-gns = { path = "../../", features = ["trajectory"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
